--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
       <artifactId>spring-context</artifactId>
       <version>5.2.0.RELEASE</version>
     </dependency>
+    <dependency>
+      <groupId>javax</groupId>
+      <artifactId>javaee-api</artifactId>
+      <version>7.0</version>
+    </dependency>
   </dependencies>
 
 
